deploy/openshift/sws.yaml
id: sws
kind: Template
apiVersion: v1
name: SWS Template
metadata:
  name: sws
  app: sws
parameters:
- description: The version of the image to use
  name: IMAGE_VERSION
  value: dev
objects:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: sws
    labels:
      app: sws
- apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    name: sws
    labels:
      name: sws
      app: sws
  spec:
    selector:
      matchLabels:
        name: sws
    template:
      metadata:
        labels:
          name: sws
          app: sws
      spec:
        serviceAccount: sws
        containers:
        - image: jmazzitelli/sws:${IMAGE_VERSION}
          name: sws
          command:
            - "/opt/sws/sws"
            - "-config"
            - "/sws-configuration/config.yaml"
            - "-v"
            - "4"
          volumeMounts:
          - name: sws-configuration
            mountPath: "/sws-configuration"
        volumes:
        - name: sws-configuration
          configMap:
            name: sws-configuration
        - name: sws
          configMap:
            name: sws-configuration
