deploy/openshift/kiali.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: kiali-cert-secret
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  type: NodePort
  ports:
  - name: tcp
    protocol: TCP
    port: 20001
  selector:
    app: kiali
    version: ${VERSION_LABEL}
---
apiVersion: v1
kind: Route
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  tls:
    termination: reencrypt
  to:
    kind: Service
    targetPort: 20001
    name: kiali
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
      version: ${VERSION_LABEL}
  template:
    metadata:
      name: kiali
      labels:
        app: kiali
        version: ${VERSION_LABEL}
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxAvailable: 1
      type: RollingUpdate
    spec:
      serviceAccount: kiali
      containers:
      - image: ${IMAGE_NAME}:${IMAGE_VERSION}
        name: kiali
        command:
        - "/opt/kiali/kiali"
        - "-config"
        - "/kiali-configuration/config.yaml"
        - "-v"
        - "${VERBOSE_MODE}"
        volumeMounts:
        - name: kiali-configuration
          mountPath: "/kiali-configuration"
        - name: kiali-cert
          mountPath: "/kiali-cert"
      volumes:
      - name: kiali-configuration
        configMap:
          name: kiali
      - name: kiali-cert
        secret:
          secretName: kiali-cert-secret
