deploy/openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  tls:
    termination: reencrypt
  to:
    kind: Service
    targetPort: 20002
    name: kiali
